# maketrace

./: CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md
proto/: tracer.proto
protoc-qt/: CMakeLists.txt
protoc-qt/compiler/: cli_main.cc  cpp_bytes_field.cc  cpp_bytes_field.h  cpp_enum.cc  cpp_enum.h  cpp_enum_field.cc  cpp_enum_field.h  cpp_extension.cc  cpp_extension.h  cpp_field.cc  cpp_field.h  cpp_file.cc  cpp_file.h  cpp_generator.cc  cpp_helpers.cc  cpp_message.cc  cpp_message.h  cpp_message_field.cc  cpp_message_field.h  cpp_primitive_field.cc  cpp_primitive_field.h  cpp_service.cc  cpp_service.h  cpp_string_field.cc
protoc-qt/google/protobuf/stubs/: hash.h  strutil.h  substitute.h
protoc-qt/runtime/: generated_message_reflection.cc
protoc-qt/runtime/include/protobuf_qt/: generated_message_reflection.h
src/: common.h  fromapt.cc  fromapt.h  graph.h  installedfilesreader.cc  installedfilesreader.h  main.cc  make_unique.h  memory.cc  memory.h  reference.cc  reference.h  toolsearchpath.cc  toolsearchpath.h  tracecontroller.cc  tracecontroller.h  tracer.cc  tracer.h  tracereader.cc  tracereader.h
src/analysis/: buildtargetgen.cc  buildtargetgen.h  configure.cc  configure.h  gccbuildtargetgen.cc  gccbuildtargetgen.h  install.cc  install.h  make.cc  make.h  staticlinkbuildtargetgen.cc  staticlinkbuildtargetgen.h  targetmatchnode.cc  targetmatchnode.h  tracenode.cc  tracenode.h
src/utils/: logging.h  path.cc  path.h  recordfile.h  recursive_copy.cc  recursive_copy.h  stl.h  str.cc  str.h  subcommand.cc  subcommand.h
test/: CMakeLists.txt  logging_env.cc  tracer_test.cc
